--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,12 @@
 {
-  "manifest_version": 2,
-  "name": "Exclude made in china products",
-  "version": "0.1",
+  	"manifest_version": 2,
+  	"name": "Exclude made in china products",
+  	"version": "0.1",
   
-
+  	"browser_action":{
+  		"default_popup": "popup.html",
+  		"default_title": "test popup"
+  	},
 	"content_scripts": [
 	  {
 		"matches": [
@@ -11,5 +14,13 @@
 		],
 		"js": ["content.js"]
 	  }
-	]
+	],
+	  "permissions": [
+        "contextMenus",
+        "tabs",
+        "http://*/*",
+        "https://*/*",
+        "activeTab",
+        "*://*/*"
+    ]
 }
